refactor: 초기 오픈하는 카드를 딜러 -> 입력된 이름 순서대로 출력하게 수정